--- a/MOD_UI/src/app/admin-dashboard/current-trainings-info/current-trainings-info.component.html
+++ b/MOD_UI/src/app/admin-dashboard/current-trainings-info/current-trainings-info.component.html
@@ -24,9 +24,8 @@
         <td>{{i.timeSlot}}</td>
         <td>
           <div class="progress">
-            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100"
-              aria-valuemin="0" aria-valuemax="100" [style.width.px]="i.progress">
-              {{i.progress}}
+            <div class="progress-bar progress-bar-striped progress-bar-animated text-dark" style="font-weight: bold;" role="progressbar"  [style.width.px]="i.progress">
+              {{i.progress}}%
             </div>
           </div>
         </td>
