--- a/MOD_UI/src/app/user-dashboard/completed-trainings/completed-trainings.component.html
+++ b/MOD_UI/src/app/user-dashboard/completed-trainings/completed-trainings.component.html
@@ -19,7 +19,7 @@
 
       <tr *ngFor="let i of compT">
         <td>{{i.skillname}}</td>
-        <td>{{i.mentorName}}</td>
+        <td>{{i.mentorFirstName}} {{i.mentorLastName}}</td>
         <td>{{i.startDate | date: 'dd/MM/yyyy'}}</td>
         <td>{{i.endDate | date: 'dd/MM/yyyy'}}</td>
         <td>{{i.timeSlot}}</td>
