--- a/MOD_UI/src/app/user-dashboard/current-trainings/current-trainings.component.html
+++ b/MOD_UI/src/app/user-dashboard/current-trainings/current-trainings.component.html
@@ -18,15 +18,14 @@
 
       <tr *ngFor="let i of curT">
         <td scope="row">{{i.skillname}}</td>
-        <td>{{i.mentorName}}</td>
+        <td>{{i.mentorFirstName}} {{i.mentorLastName}}</td>
         <td>{{i.startDate | date: 'dd/MM/yyyy'}}</td>
         <td>{{i.endDate | date: 'dd/MM/yyyy'}}</td>
         <td>{{i.timeSlot}}</td>
         <td>
           <div class="progress">
-            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100"
-              aria-valuemin="0" aria-valuemax="100" [style.width.px]="i.progress">
-              {{i.progress}}
+            <div class="progress-bar progress-bar-striped progress-bar-animated text-dark" style="font-weight: bold;" role="progressbar"  [style.width.px]="i.progress">
+              {{i.progress}}%
             </div>
           </div>
         </td>
